fix(VideoModal.js): Fixed video sizing. Sould no longer overflow and should close properly on mobile.

--- a/client/src/styles/layout/_modal.scss
+++ b/client/src/styles/layout/_modal.scss
@@ -1,7 +1,7 @@
 .modal-background {
   position: fixed;
   display: grid;
-  min-height: 100vh;
+  min-height: 90vh;
   width: 100vw;
   margin: 0;
   bottom: 0;
@@ -11,14 +11,20 @@
 }
 
 .image-modal {
-  position: relative;
   display: grid;
   justify-content: center;
   align-self: center;
-  margin-top: 2rem;
-  height: 85%;
+  min-height: 100vh;
   z-index: 2;
   cursor: pointer;
+
+  video {
+    position: relative;
+    max-height: 100vh;
+    height: 100%;
+    max-width: 90vw;
+    width: 100%;
+  }
 
   img {
     max-width: 100vw;
